Closed Bug 446463 Opened 16 years ago Closed 16 years ago

DrawWidgetBackground can't snap to pixels properly, remove translation

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1a2

People

(Reporter: mstange, Assigned: mstange)

References

Details

Attachments

(2 files, 2 obsolete files)

Before DrawWidgetBackground is called, nsCSSRendering::PaintBackgroundWithSC pushes a translation to the context and resets the widget rect's offset to 0. However, the width of the rect is not enough information to correctly pixel-snap the rect.

In bug 231313 I need the tabs to align neatly - it looks bad if they overlap / have gaps. Tree header cells also show this bug, see screenshot.
Attached patch fix v0.1 (obsolete) — Splinter Review
Maybe we should add something for Windows / GTK, too; however, from my understanding of that code, it's not really necessary.
Attachment #330629 - Flags: review?(roc)
Comment on attachment 330629 [details] [diff] [review]
fix v0.1

This is wrong... new patch coming
Attachment #330629 - Attachment is obsolete: true
Attachment #330629 - Flags: review?(roc)
Attached patch fix v0.2 (obsolete) — Splinter Review
Attachment #330649 - Flags: review?(roc)
Comment on attachment 330649 [details] [diff] [review]
fix v0.2

Removing translation is definitely the right way to go
Attachment #330649 - Flags: superreview+
Attachment #330649 - Flags: review?(roc)
Attachment #330649 - Flags: review+
Keywords: checkin-needed
The patch had bitrotted due to bug 444837.
Attachment #330649 - Attachment is obsolete: true
http://hg.mozilla.org/index.cgi/mozilla-central/rev/cf5f9b3fd1b1
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a2
Keywords: checkin-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: