Bug 446463 - DrawWidgetBackground can't snap to pixels properly, remove translation. r+sr=roc.